--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1561,6 +1561,10 @@ vertical-align:middle;}
 #popHoverM { top:-53px !important;left:63px !important; }
 
 #popHoverM.fixW { left:403px !important; }
+@media (max-width:calc(960px)) {
+   #popHoverM.fixW { left:cacl(403px - (100vw - 960px)) !important; }
+}
+
 
 #popSame { margin-top:-10px; z-index:1000000; }
 #popDL { margin-top:30px; }
