fix 'In:' subtitle when title shorter than line (#278)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1864,6 +1864,7 @@ h4:hover a.no-bdrc img { opacity:1; }
 
 
 .resource .data.images-title h2.intro + h2 span { max-width:700px;}
+.resource .data.images-title h3 { width:100%;}
 
 .resource .data h2.intro + h2 .lang,
 .resource .data h2.intro + h2 .T { display:none; }
