add hovermenu on click for Title/Name & Notes (#257)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1648,6 +1648,7 @@ body > [id^="menu-"] > div:last-child,
 /* ------------------------------------------------------------------------------------------------------------------------ hover panel */
 
 .hasTogHovM { cursor:help;}
+.sub.hasTogHovM .subsub h4,
 .hasTogHovM span { cursor:auto;}
 
 .resource .data:not(.legal-props) span > .before,
