--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2249,10 +2249,12 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 
 .resource .data.related .react-tabs__tab,
 .resource .data.related .react-tabs__tab.react-tabs__tab--selected,
-.resource .data.related .react-tabs__tab:focus { box-shadow:none; border:none; border-radius:0;padding:15px 0px; width:206px; text-align:center;}
+.resource .data.related .react-tabs__tab:focus { box-shadow:none; border:none; border-radius:0;padding:15px 25px; max-width:calc(50% - 50px); text-align:center;}
 
-.resource .data.related .react-tabs__tab-list { border:none; font-weight:600; } 
+.resource .data.related .react-tabs__tab-list { border:none; font-weight:600; position:relative;} 
 
+.resource .data.related .header.thumb:before { content:none; }
+.resource .data.related .header.thumb { background-position:center; background-size:cover; border: 1px solid #ccc;}
 /* ------------------------------------------------------------------------------------------------------------------------ extended properties */
 
 
