--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1527,7 +1527,7 @@ vertical-align:middle;}
 #popHoverM > div:last-child .resource .data { padding-left:53px; padding-bottom:35px; padding-top:27px; margin-left:0; }
 #popHoverM > div:last-child .resource .data .react-tabs { background-color:#fcf5e2; min-width:898px; margin-left:-25px;margin-top:20px; min-height:150px; font-size:0;}
 #popHoverM .react-tabs__tab { border:none;border-radius:0; width:calc(25% - 1px); font-size:10px; padding:0; text-align:center; line-height:40px; bottom:-1px !important; 
-   background-color:#999487; border-right:1px solid white; 
+   background-color:#fce08d; border-right:1px solid white; 
 }
 #popHoverM .react-tabs__tab:last-child { width:calc(25%); border:none; }
 #popHoverM .react-tabs__tab.react-tabs__tab--selected {background-color:#fcf5e2;  }
