--- a/src/components/App.css
+++ b/src/components/App.css
@@ -156,6 +156,7 @@ footer#site-footer.no-syncs > div.head::before { background-color:#efefef; }
 .subsubtitleFront > a {text-decoration: none; color: #d73449; }
 .subsubtitleFront > a[lang="bo"] { padding-left:5px; }
 
+.subsubtitleFront:last-of-type,
 .subsubtitleFront + .subsubtitleFront { font-weight:400 !important;}
 
 
@@ -2417,6 +2418,7 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 .resource .data#map .header .map .placeMap  { width:100%;height:auto;}
 
 .resource .data#map .header .map .placeMap  { width:100%; height:500px;}
+
 
 
 /* ------------------------------------------------------------------------------------------------------------------------ etext view */
