--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1731,7 +1731,7 @@ body > [id^="menu-"] > div:last-child,
 .resource .data [data-prop="bdo:workHasInstance"] .images-thumb { width:100px;height:100px;}
 .resource .data [data-prop="bdo:workHasInstance"] .images-thumb-links { margin-left:10px;}
 
-.resource .data > [data-prop="bdo:workHasInstance"] > h3 ~ .group > h4.multiple { display:inline-block; }
+.resource .data > [data-prop="bdo:workHasInstance"] > h3 ~ .group > h4.multiple { display:inline-block; margin-top:4px;}
 
 .resource .data > [data-prop="bdo:workHasInstance"] .provider::before { content:none;}
 
