--- a/src/components/App.css
+++ b/src/components/App.css
@@ -361,7 +361,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 /* --------------------------------------------------------------------------------------------------------------------- topbar */
 
 .nav { width:100%; height:80px; position:fixed;top:0;left:0;background:white; display:flex;align-items: center; justify-content: center;
-   box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); z-index:10010; position:relative;
+   box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); z-index:10010; 
 }
 
 .nav #back,.nav #back h2 span { 
