--- a/src/components/App.css
+++ b/src/components/App.css
@@ -678,6 +678,9 @@ a.result + #matches .result-content #matches { font-size:12px; line-height:18px;
 a.result + #matches .result-content .contenu { margin-left:100px; max-width:calc(100% - 160px - 24px);}
 a.result + #matches .result-content #matches { margin-left:125px; margin-bottom:0;}
 
+a.result + #matches .result-content #matches .match.Text.Match { margin-top:0;} 
+a.result + #matches .result-content #matches .match.Text.Match .label { display:none; }
+
 a.result + #matches .result-content::before { left:110px; width:calc(100% - 110px - 50px); }
 
 #matches .match:last-child { margin-bottom:0;}
