--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1047,7 +1047,7 @@ h4:not(:hover) > .lang
    padding: 0 15px; border:none !important; font-weight:600; font-size:13px; cursor:pointer;}
 
 .resource > .index { width:15%; padding-top:10px; position:fixed; }
-.resource:not(.etext-view) > :not(.index):not(.ariane) { width:85%; margin-left:15%; /*position:relative;*/ }
+.resource:not(.etext-view):not(.static) > :not(.index):not(.ariane) { width:85%; margin-left:15%; /*position:relative;*/ }
 
 .resource > .ariane { position:absolute; top:105px; color: #343434; left:0; margin-left:140px;padding-left:12.125%; }
 .resource > .ariane img { display:inline-block; margin-right:5px; vertical-align: -1px;}
